<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.asligresik.inventoryApp.activity.MainActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/txtUserInfo"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtUserName"
            android:text="Afandi"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.AppCompatTextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:alignmentMode="alignMargins"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUserInfo"
        app:columnCount="2"
        app:rowCount="5">

        <androidx.cardview.widget.CardView
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#5F9EA0"
            app:cardBackgroundColor="#5F9EA0"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <RelativeLayout
                android:id="@+id/stockIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/stockin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user"
                    android:layout_centerHorizontal="true"
                    
                    android:text="Stock In"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/frameLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#D2691E"
            app:cardBackgroundColor="#D2691E"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <RelativeLayout
                android:id="@+id/stockOut"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/job"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/stockout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/job"
                    android:layout_centerHorizontal="true"
                    
                    android:text="@string/stock_out"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/frameLayout3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#CD5C5C"
            app:cardBackgroundColor="#CD5C5C"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <RelativeLayout
                android:id="@+id/stock"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/stock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/notif"
                    android:layout_centerHorizontal="true"
                    
                    android:text="@string/stock"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/frameLayout4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#B8860B"
            app:cardBackgroundColor="#B8860B"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <RelativeLayout
                android:id="@+id/history"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mail"
                    android:layout_centerHorizontal="true"
                    
                    android:text="@string/history"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/frameLayout5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#B8860B"
            app:cardBackgroundColor="#B8860B"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <RelativeLayout
                android:id="@+id/stockOpname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#AF1414">

                <ImageView
                    android:id="@+id/imgStockOpname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgStockOpname"
                    android:layout_centerHorizontal="true"
                    
                    android:text="@string/stockOpname"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/frameLayout6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#EE0089"
            app:cardBackgroundColor="#EE0089"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <RelativeLayout
                android:id="@+id/incoming"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgIncoming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgIncoming"
                    android:layout_centerHorizontal="true"
                    
                    android:text="Transfer"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/frameLayout7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <RelativeLayout
                android:id="@+id/reporting"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgReporting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/stock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgReporting"
                    android:layout_centerHorizontal="true"
                    
                    android:text="Oustanding MR"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/frameLayout8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/holo_orange_light"
            app:cardBackgroundColor="@android:color/holo_orange_light"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <RelativeLayout
                android:id="@+id/stockRmi"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgStockRmi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/stock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgStockRmi"
                    android:layout_centerHorizontal="true"
                    
                    android:text="Stock RMI"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/frameLayout9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/holo_red_light"
            app:cardBackgroundColor="@android:color/holo_red_light"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <RelativeLayout
                android:id="@+id/printLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgPrintLabel"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/stock"
                    tools:srcCompat="@drawable/qrcode" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imgPrintLabel"
                    android:layout_centerHorizontal="true"
                    
                    android:text="@string/cetak_label"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>